api接口文档管理系统设计文档

--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -318,6 +318,192 @@
         </div>
     </script>
 
+    <script id="myRpcPreviewModalTemplate" type="text/x-handlebars-template">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="form-group">
+                    <h3 id="rpcInterfaceNameView">
+                        {{name}}
+                    </h3>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="form-group text-right">
+                    类全路径名称：
+                </div>
+            </div>
+            <div class="col-sm-10">
+                <div class="form-group" id="rpcClassNameView">
+                    {{className}}
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="form-group text-right">
+                    方法名称：
+                </div>
+            </div>
+            <div class="col-sm-10">
+                <div class="form-group" id="rpcMethodNameView">
+                    {{methodName}}
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="form-group text-right">
+                    功能描述：
+                </div>
+            </div>
+            <div class="col-sm-10">
+                <div class="form-group" id="rpcFunctionDescribeView">
+                    {{functionDescribe}}
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="form-group text-right">
+                    返回值类型：
+                </div>
+            </div>
+            <div class="col-sm-10">
+                <div class="form-group" id="rpcReturnTypeView">
+                    {{returnType}}
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-2">
+                <div class="form-group text-right">
+                    方法参数：
+                </div>
+            </div>
+            <div class="col-sm-10">
+                <div class="form-group" id="rpcMethodParamView">
+                    {{methodParam}}
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="form-group">
+                    <table class="table table-bordered">
+                        <caption>参数说明</caption>
+                        <thead>
+                        <tr>
+                            <th>名称</th>
+                            <th>类型</th>
+                            <th>说明</th>
+                            <th>是否必填</th>
+                            <th>JSON格式化传输</th>
+                            <th>示例</th>
+                            <th>默认值</th>
+                        </tr>
+                        </thead>
+                        <tbody id="myRpcPreviewTBody">
+                        {{#if interfaceParamEntities}}
+                        {{#interfaceParamEntities}}
+                        <tr>
+                            <td>{{paramName}}</td>
+                            <td>{{paramType}}</td>
+                            <td>{{paramDescribe}}</td>
+                            <td>{{required}}</td>
+                            <td>{{jsontransformat}}</td>
+                            <td>{{example}}</td>
+                            <td>{{defaultValue}}</td>
+                        </tr>
+                        {{/interfaceParamEntities}}
+                        {{else}}
+                        <tr>
+                            <td class='text-center' colspan='7'>暂无信息！</td>
+                        </tr>
+                        {{/if}}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="form-group">
+                    <ul id="myRpcPreviewTab" class="nav nav-tabs">
+                        <li class="active">
+                            <a href="#returnExampleRpcPreview" data-toggle="tab">
+                                返回示例
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#exceptionExampleRpcPreview" data-toggle="tab">
+                                异常示例
+                            </a>
+                        </li>
+                    </ul>
+                    <div id="myRpcPreviewTabContent" class="tab-content">
+                        {{#if interfaceResultEntities}}
+                        {{#interfaceResultEntities}}
+                        {{#compareExampleType exampleType "NORMAL" }}
+                        <div class="tab-pane fade in active" id="returnExampleRpcPreview">
+                            <br/>
+                            <div class="form-group">
+                                <h6>返回示例</h6>
+                                <pre id="rpcReturnExampleView">
+                                     {{#if exampleContent}}
+                                        {{exampleContent}}
+                                    {{else}}
+                                        暂无返回示例！
+                                    {{/if}}
+                                </pre>
+                            </div>
+                            <br/>
+                            <div class="form-group">
+                                <h6>注意事项</h6>
+                                <pre id="rpcReturnAttentionMattersView">
+                                     {{#if attentionMatters}}
+                                        {{attentionMatters}}
+                                    {{else}}
+                                        暂无注意事项！
+                                    {{/if}}
+                                </pre>
+                            </div>
+                        </div>
+                        {{else}}
+                        <div class="tab-pane fade" id="exceptionExampleRpcPreview">
+                            <br/>
+                            <div class="form-group">
+                                <h6>异常示例</h6>
+                                <pre id="rpcExceptionExampleView">
+                                    {{#if exampleContent}}
+                                        {{exampleContent}}
+                                    {{else}}
+                                        暂无返回示例！
+                                    {{/if}}
+                                </pre>
+                            </div>
+                            <br/>
+                            <div class="form-group">
+                                <h6>注意事项</h6>
+                                <pre id="rpcExceptionAttentionMattersView">
+                                    {{#if attentionMatters}}
+                                        {{attentionMatters}}
+                                    {{else}}
+                                        暂无注意事项！
+                                    {{/if}}
+                                </pre>
+                            </div>
+                        </div>
+                        {{/compareExampleType}}
+                        {{/interfaceResultEntities}}
+                        {{/if}}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </script>
+
     <script>
         $(function () {
             var boolObj = new Object();
@@ -599,64 +785,7 @@
             $("#rpcTableTBody").delegate("button.btn-warning", "click", function () {
                 var interfaceId = $(this).attr("data-interfaceid");
                 $.get("interfaceRpc/findInterfaceRpc/" + interfaceId, null, function (data) {
-                    console.log(data);
-                    $("#rpcInterfaceNameView").html(data.name);
-                    $("#rpcClassNameView").html(data.className);
-                    $("#rpcMethodNameView").html(data.methodName);
-                    $("#rpcFunctionDescribeView").html(data.functionDescribe);
-                    $("#rpcReturnTypeView").html(data.returnType);
-                    $("#rpcMethodParamView").html(data.methodParam);
-                    //请求参数
-                    if (data.interfaceParamEntities != null && data.interfaceParamEntities.length > 0) {
-                        var trElements = "";
-                        for (var i = 0; i < data.interfaceParamEntities.length; i++) {
-                            var trElement = "<tr>";
-                            trElement += ("<td>" + data.interfaceParamEntities[i].paramName + "</td>");
-                            trElement += ("<td>" + data.interfaceParamEntities[i].paramType + "</td>");
-                            trElement += ("<td>" + data.interfaceParamEntities[i].paramDescribe + "</td>");
-                            trElement += ("<td>" + boolObj[data.interfaceParamEntities[i].required] + "</td>");
-                            trElement += ("<td>" + boolObj[data.interfaceParamEntities[i].jsontransformat] + "</td>");
-                            trElement += ("<td>" + data.interfaceParamEntities[i].example + "</td>");
-                            trElement += ("<td>" + data.interfaceParamEntities[i].defaultValue + "</td>");
-                            trElement += ("</tr>");
-                            trElements += trElement;
-                        }
-                        $("#myRpcPreviewTBody").html(trElements);
-                    } else {
-                        $("#myRpcPreviewTBody").html("<tr>" + "<td class='text-center' colspan='7'>" + "暂无信息！" + "</td>" + "</tr>")
-                    }
-
-                    //结果示例
-                    if (data.interfaceResultEntities != null && data.interfaceResultEntities.length > 0) {
-                        debugger;
-                        for (var i = 0; i < data.interfaceResultEntities.length; i++) {
-                            if (data.interfaceResultEntities[i].exampleType == "NORMAL") {
-                                if (data.interfaceResultEntities[i].exampleContent == null || data.interfaceResultEntities[i].exampleContent.trim() == "") {
-                                    $("#rpcReturnExampleView").html("暂无返回示例！");
-                                } else {
-                                    $("#rpcReturnExampleView").html(data.interfaceResultEntities[i].exampleContent);
-                                }
-
-                                if (data.interfaceResultEntities[i].attentionMatters == null || data.interfaceResultEntities[i].attentionMatters.trim() == "") {
-                                    $("#rpcReturnAttentionMattersView").html("暂无注意事项！")
-                                } else {
-                                    $("#rpcReturnAttentionMattersView").html(data.interfaceResultEntities[i].attentionMatters);
-                                }
-                            } else {
-                                if (data.interfaceResultEntities[i].exampleContent == null || data.interfaceResultEntities[i].exampleContent.trim() == "") {
-                                    $("#rpcExceptionExampleView").html("暂无异常示例！");
-                                } else {
-                                    $("#rpcExceptionExampleView").html(data.interfaceResultEntities[i].exampleContent);
-                                }
-
-                                if (data.interfaceResultEntities[i].attentionMatters == null || data.interfaceResultEntities[i].attentionMatters.trim() == "") {
-                                    $("#rpcExceptionAttentionMattersView").html("暂无注意事项！");
-                                } else {
-                                    $("#rpcExceptionAttentionMattersView").html(data.interfaceResultEntities[i].attentionMatters);
-                                }
-                            }
-                        }
-                    }
+                    $("#myRpcPreviewModal").find(".modal-body").handlebars($("#myRpcPreviewModalTemplate"), data);
                 });
             });
 
@@ -1314,149 +1443,7 @@
                 </h4>
             </div>
             <div class="modal-body">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="form-group">
-                            <h3 id="rpcInterfaceNameView">
-                                <!--接口名称占位符-->
-                            </h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-2">
-                        <div class="form-group text-right">
-                            类全路径名称：
-                        </div>
-                    </div>
-                    <div class="col-sm-10">
-                        <div class="form-group" id="rpcClassNameView">
-                            <!--类全路径名称占位符-->
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-2">
-                        <div class="form-group text-right">
-                            方法名称：
-                        </div>
-                    </div>
-                    <div class="col-sm-10">
-                        <div class="form-group" id="rpcMethodNameView">
-                            <!--方法名称占位符-->
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-2">
-                        <div class="form-group text-right">
-                            功能描述：
-                        </div>
-                    </div>
-                    <div class="col-sm-10">
-                        <div class="form-group" id="rpcFunctionDescribeView">
-                            <!--功能描述占位符-->
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-2">
-                        <div class="form-group text-right">
-                            返回值类型：
-                        </div>
-                    </div>
-                    <div class="col-sm-10">
-                        <div class="form-group" id="rpcReturnTypeView">
-                            <!--返回值类型占位符-->
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-2">
-                        <div class="form-group text-right">
-                            方法参数：
-                        </div>
-                    </div>
-                    <div class="col-sm-10">
-                        <div class="form-group" id="rpcMethodParamView">
-                            <!--方法参数占位符-->
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="form-group">
-                            <table class="table table-bordered">
-                                <caption>参数说明</caption>
-                                <thead>
-                                <tr>
-                                    <th>名称</th>
-                                    <th>类型</th>
-                                    <th>说明</th>
-                                    <th>是否必填</th>
-                                    <th>JSON格式化传输</th>
-                                    <th>示例</th>
-                                    <th>默认值</th>
-                                </tr>
-                                </thead>
-                                <tbody id="myRpcPreviewTBody">
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="form-group">
-                            <ul id="myRpcPreviewTab" class="nav nav-tabs">
-                                <li class="active">
-                                    <a href="#returnExampleRpcPreview" data-toggle="tab">
-                                        返回示例
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#exceptionExampleRpcPreview" data-toggle="tab">
-                                        异常示例
-                                    </a>
-                                </li>
-                            </ul>
-                            <div id="myRpcPreviewTabContent" class="tab-content">
-                                <div class="tab-pane fade in active" id="returnExampleRpcPreview">
-                                    <br/>
-                                    <div class="form-group">
-                                        <h6>返回示例</h6>
-                                        <pre id="rpcReturnExampleView">
-                                            <!--返回示例占位符-->
-                                        </pre>
-                                    </div>
-                                    <br/>
-                                    <div class="form-group">
-                                        <h6>注意事项</h6>
-                                        <pre id="rpcReturnAttentionMattersView">
-                                            <!--注意事项占位符-->
-                                        </pre>
-                                    </div>
-                                </div>
-                                <div class="tab-pane fade" id="exceptionExampleRpcPreview">
-                                    <br/>
-                                    <div class="form-group">
-                                        <h6>异常示例</h6>
-                                        <pre id="rpcExceptionExampleView">
-                                            <!--异常示例占位符-->
-                                        </pre>
-                                    </div>
-                                    <br/>
-                                    <div class="form-group">
-                                        <h6>注意事项</h6>
-                                        <pre id="rpcExceptionAttentionMattersView">
-                                            <!--注意事项占位符-->
-                                        </pre>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">关闭
